# short-url-srv

./: Cargo.toml  config.dev.yaml  config.prod.yaml  config.test.yaml  dev.yaml  guide  prod.yaml  test.yaml
migrations/: 1_users.sql  2_apps.sql  2_links.sql  3_custom_domains.sql  3_links.sql  3_short_urls.sql  4_click_stats.sql  5_access_logs.sql
src/: main.rs
src/api/: app_handler.rs  mod.rs  response.rs  shorten_handler.rs  user_handler.rs
src/api/http/: app_handler.rs  auth.rs  link_handler.rs  middleware.rs  mod.rs  response.rs  router.rs  shorten_handler.rs  user_handler.rs
src/api/http/middleware/: jwt.rs
src/dao/: app_dao.rs  links_dao.rs  mod.rs  short_url_dao.rs  user_dao.rs
src/dao/ent/: apps.rs  links.rs  mod.rs  short_urls.rs  users.rs
src/infra/: config.rs  db.rs  logger.rs  mod.rs
src/infra/auth/: jwt.rs
src/infra/utils/: time.rs
src/logic/: app_logic.rs  link_logic.rs  mod.rs  short_url_logic.rs  user_logic.rs
src/repository/: app_repo.rs  errors.rs  link_repo.rs  mod.rs  repo.rs  short_url_repo.rs  user_repo.rs
src/service/http/: service.rs
src/web_server/: mod.rs  router.rs  service.rs
