[package]
name = "short-url-srv"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["typed-header"] }
base62 = { version = "2.0" }
bcrypt = "0.15"
chrono = "0.4.38"
confique = { version = "0.2.5", features = ["yaml"] }
jsonwebtoken = "9.3.0"
lazy_static = { version = "1.5" }
murmur3 = "0.5.2"
notify = "6.1"
once_cell = "1.19.0"
rand = "0.8"
reqwest = "0.12.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql", "time"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

tracing = { version = "0.1.40" }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2.5.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[profile.release]
opt-level = 3     # 最大程度优化代码速度
lto = "fat"       # 启用最大程度的链接时优化
codegen-units = 1 # 降低代码生成单元数，增加优化时间但提升性能
panic = "abort"   # 使用 'abort' 而不是 'unwind' 来处理 panic
debug = false
